fix: spacing

--- a/home/homestyles.css
+++ b/home/homestyles.css
@@ -4,6 +4,7 @@
     --light-white: #e9e9e9;
     --font-black-color: #1111;
     --grey-color-font: #888;
+    --button-main-color: #007BFF;
 }
 body {
     font-family: "Poppins", sans-serif;
@@ -81,7 +82,6 @@ body {
 .image-footer:hover{
     opacity: 1;
 }
-
 .card {
     margin: 0.7rem 0.56rem 1rem 8rem;
     padding: 1rem 0rem 0rem 1rem;
@@ -100,7 +100,12 @@ body {
     font-size: 1.5rem;
     font-weight: bold;
 }
-
+.shop-here{
+    background-color: var(--button-main-color);
+    padding: 0.60rem;
+    border: none;
+    border-radius: 5px;
+}
 .offer-footer {
     display: grid;
     grid-template-columns: auto auto;
